# project_volatire

./: .gitignore  05_GOVERNANCE.md  AGENTS.md  CONTRIBUTING.md  PROJECT_MANAGEMENT.md  RELEASE_NOTES_v0.5.0.md  RELEASE_NOTES_v0.6.0.md  macro_cache.json  reflection_report.md  setup_project_v.zsh
.Jules/: palette.md
.github/workflows/: ci.yml
.jules/: bolt.md
deploy/: production.yml
deploy/orchestrator/: hotswap.sh
docker/: dragonfly.yaml  otel-collector.yaml  telemetry-stack.yaml
docker/orchestrator/: sentinel_watchdog.py
docs/diataxis/: README.md
docs/diataxis/explanation/: architecture_overview.md  execution_mechanics.md  recovery_protocols.md
docs/diataxis/how-to/: manual_overrides.md  running_live_mode.md
docs/diataxis/reference/: latency_budget.md  legislative_logs.md  sequence_diagrams.md
docs/public/explanation/: 01_architecture.md  02_governance.md  03_agents.md
docs/public/how-to/: 01_run_backfill.md  deployment_manual.md  developer_guide.md
docs/public/reference/: TECHNICAL_REFERENCE.md  api_glossary.md  configuration.md  services.md
docs/public/release_notes/: v0.7.0_catchup.md  v0.9.0_Grand_Library.md  v1.0.0_phase4_governor.md
docs/public/tutorials/: 01_getting_started.md
docs/verification/: phase_1_4_audit.md  phase_5_readiness.md
infra/: docker-compose.envoy.yaml  docker-compose.prod.yml  docker-compose.yml  envoy.yaml
protos/: brain.proto  macro.proto  reflex.proto
scripts/: archive_cron.sh  audit_r2_size.py  backfill_crypto.py  backfill_crypto_coinbase.py  backfill_crypto_gap.py  backfill_crypto_synthetic.py  backfill_crypto_tiingo.py  backfill_crypto_twelve.py  check_av.py  check_db_stats.py  check_tiingo.py  compile_protos.zsh  ignite.sh  purge_synthetic.py  setup_env.zsh  setup_project_v.zsh  shutdown.sh  verify_memory.py  verify_pulse.sh
scripts/analysis/: hallucination_report.py
scripts/audit/: analyze_jitter.py  clean_room_verify.sh  phase6_stress.sh  report_generator.py  vector_a_telemetry_burst.sh  vector_b_brain_desync.sh  vector_c_jitter_audit.sh
scripts/audit/lib/: metrics.sh  perf_analyzer.py
scripts/db/: init_sovereign_db.sql
scripts/sys/: grub_setup_guide.md  isolate_cores.sh  verify_isolation.sh
scripts/verify/: gemma_audit.py
src/brain/: audit_models.py  check_models.py  pyproject.toml  test_client.py
src/brain/app/: main.py  server.py
src/brain/brain.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
src/brain/models/crypto_bert_onnx/: config.json  ort_config.json  tokenizer_config.json
src/brain/scripts/: debug_cp.py  test_boyd.py  test_hypatia.py  test_kepler.py  test_news.py  verify_kepler_hardening.py  verify_macro.py  verify_news_live.py  verify_stress_test.py
src/brain/src/: codegen.py  main.py  model_router.py  server.py  telemetry.py
src/brain/src/boyd/: engine.py  structure.py
src/brain/src/hypatia/: adapter.py  engine.py  memory.py  models.py  news.py  sentiment.py
src/brain/src/kepler/: engine.py
src/brain/src/macro/: fetcher.py
src/brain/templates/: grounding.j2
src/interface/: .env.local.example  README.md  clear-cache.sh  jest.config.js  next.config.mjs  package-lock.json  package.json  tailwind.config.ts  tsconfig.json
src/interface/__tests__/: crypto.test.ts
src/interface/app/: globals.css  layout.tsx  page.tsx
src/interface/components/: AuthGuard.tsx  CommandDeck.tsx
src/interface/components/blotter/: OrderQueue.tsx  PositionBlotter.tsx
src/interface/components/controls/: NuclearVeto.tsx
src/interface/components/debate/: ConsensusMeter.tsx  ReasoningStream.tsx
src/interface/components/forensics/: ReplayController.tsx
src/interface/components/hud/: ForensicScrub.tsx  HotswapStatus.tsx  IgnitionSwitch.tsx  MarketInternals.tsx  ReasoningBubble.tsx  RiemannCloud.tsx  RiemannWave.tsx  SafetyStaircase.tsx  TacticalSidebar.tsx  Vitality.tsx
src/interface/components/layout/: AlphaRibbon.tsx  SafetySidebar.tsx
src/interface/components/zones/: DepthVault.tsx  SystemStatusPanel.tsx
src/interface/lib/: crypto.ts  governance.ts  stress-test.ts
src/interface/lib/grpc/: LiveTelemetryProvider.tsx  reflex-client.ts
src/interface/scripts/: generate-protos.sh
src/interface/workers/: telemetry.worker.ts
src/reflex/: Cargo.toml  build.rs  check_err.txt  check_output.txt  test_output.txt  test_results.txt  test_results_2.txt
src/reflex/scripts/: backfill_crypto.py  deep_backfill_crypto.py  distilbert_processor.py  embed_regimes.py  fetch_futures_headlights.py  fetch_recent_eth_csv.py  fetch_vvix.py  migrate_questdb_to_r2.py  phase3_stress_test.py  reflection_loop.py  search_memories.py  sovereign_audit.py
src/reflex/src/: cargo.toml  client.rs  config.rs  feynman.rs  ingest.rs  ledger.rs  lib.rs  main.rs  market.rs  server.rs  simons.rs  taleb.rs
src/reflex/src/audit/: db.rs  mod.rs  sim2real.rs
src/reflex/src/auditor/: firewall.rs  mod.rs  nullifier.rs  red_team.rs  truth_envelope.rs
src/reflex/src/brain/: mod.rs  veto_gate.rs
src/reflex/src/db/: archiver.rs  migration.rs  mod.rs  state.rs
src/reflex/src/execution/: actor.rs  auth.rs  kraken.rs  limiter.rs  mod.rs
src/reflex/src/gateway/: binary_packer.rs  mod.rs  order_manager.rs  vault.rs  venue_sentry.rs
src/reflex/src/governor/: audit_loop.rs  authority.rs  ensemble_manager.rs  genesis.rs  handoff.rs  health.rs  ignition.rs  kill_switch.rs  legislator.rs  lockdown.rs  mod.rs  ooda_loop.rs  provisional.rs  rebalancer.rs  regime_detector.rs  sentinel.rs  staircase.rs  superposition.rs  supervise.rs  wave_legislator.rs
src/reflex/src/historian/: archiver.rs  biopsy.rs  events.rs  logger.rs  mod.rs  shm_buffer.rs
src/reflex/src/ingest/: kraken.rs
src/reflex/src/market/: kraken.rs
src/reflex/src/sequencer/: mod.rs  shadow_gate.rs  sync_gate.rs
src/reflex/src/sim/: engine.rs  mod.rs  ticker.rs
src/reflex/src/taleb/: mod.rs  omega.rs  shroud.rs  sizing.rs
src/reflex/src/telemetry/: decay.rs  forensics.rs  metrics.rs  mirror.rs  mod.rs
src/reflex/tests/: verify_decay.rs  verify_drift.rs  verify_governance.rs  verify_telemetry.rs
tests/integration/: test_pulse.py
(+11 files in other folders)
