[project]
name = "brain"
version = "0.1.0"
description = "The Cognitive Engine of Project V"
requires-python = ">=3.12"
dependencies = [
    # The Nervous System
    "grpcio>=1.60.0",
    "grpcio-tools>=1.60.0",
    "protobuf>=4.25.0",

    # The Logic
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "pydantic-ai>=0.0.1",

    # The Forecaster (Kepler)
    "torch>=2.1.0",
    "transformers>=4.36.0",
    
    # The Context (Hypatia)
    "lancedb>=0.4.0",
    "sentence-transformers>=2.2.0",

    # Data & Utilities
    "polars>=0.20.0",
    "numpy>=1.26.0",
    "python-dotenv>=1.0.0",
    "structlog>=23.2.0"
]

# New Standard for uv dev dependencies
[dependency-groups]
dev = [
    "ruff>=0.1.0",
    "mypy>=1.7.0"
]

[tool.mypy]
strict = true
ignore_missing_imports = true

[tool.ruff]
line-length = 100
target-version = "py312"
