[tool.poetry]
name = "brain"
version = "0.1.0"
description = "The Mind of Voltaire (Python)"
authors = ["Antigravity <ai@voltaire.com>"]

[tool.poetry.dependencies]
python = "^3.10"
grpcio = "^1.50.0"
protobuf = "^4.21.0"
rich = "^13.0.0"
pandas = "^2.0.0"
numpy = "^1.24.0"
grpcio-tools = "^1.50.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
