[package]
name = "reflex"
version = "0.1.0"
edition = "2021"

[dependencies]
# The Nervous System (Async & RPC)
tokio = { version = "1.35", features = ["full"] }
tonic = "0.10"
prost = "0.12"

# The Physics Engine (Math)
ndarray = "0.15" # O(1) Matrix operations
nalgebra = "0.32" # Linear Algebra
statrs = "0.16"   # Statistical distributions
tokio-stream = "0.1"

# The Memory (Data)
polars = { version = "0.36", features = ["lazy", "temporal"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = "0.4"

# The Infrastructure
config = "0.13"
dotenvy = "0.15"
tracing = "0.1"
tracing-subscriber = "0.3"

[build-dependencies]
tonic-build = "0.10" # Compiles .proto to .rs

[[bin]]
name = "reflex"
path = "src/main.rs"