[package]
name = "reflex"
version = "0.1.0"
edition = "2021"

[dependencies]
# The Nervous System (Async & RPC)
tokio = { version = "1.35", features = ["full"] }
tonic = "0.10"
prost = "0.12"

# The Physics Engine (Math)
# The Physics Engine (Math)
num-complex = "0.4"
ndarray = "0.15"
ndarray-rand = "0.14"
rand = "0.8"
prost-types = "0.12"
nalgebra = "0.32" 
statrs = "0.16"
ringbuf = "0.3"
itertools = "0.12"
tokio-stream = { version = "0.1", features = ["sync"] }
futures-util = "0.3"
tokio-tungstenite = { version = "0.20", features = ["native-tls"] }
url = "2.5"
warp = "0.3"


# The Memory (Data)
polars = { version = "0.36", features = ["lazy", "temporal"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = "0.4"

# The Infrastructure
config = "0.13"
dotenvy = "0.15"
questdb-rs = "6.1.0"
tokio-postgres = "0.7.15"
deadpool-postgres = "0.14"
deadpool-redis = "0.10"
rmp-serde = "1.1" # MessagePack Serialization
nix = { version = "0.27", features = ["socket", "uio", "fs", "process", "signal"] } # Unix Sockets & SCM_RIGHTS (D-81)
memmap2 = "0.9" # Shared Memory (D-81)
bincode = "1.3" # State Serialization (D-81)

# Telemetry
opentelemetry = { version = "0.21", features = ["metrics", "logs"] }
opentelemetry_sdk = { version = "0.21", features = ["rt-tokio", "metrics", "logs"] }
opentelemetry-otlp = { version = "0.14", features = ["metrics", "logs"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-opentelemetry = "0.22"
opentelemetry-appender-tracing = "0.2"
# Connection Pooling
redis = { version = "0.21.7", features = ["tokio-comp"] }
# bincode removed in favor of MessagePack (D-42)

# Zero-Copy Logging (D-82)
rkyv = { version = "0.7.42", features = ["validation", "std"] }
bytemuck = "1.14"
once_cell = "1.19"

# Cryptography (Memory Safety)
libc = "0.2"
zeroize = { version = "1.7", features = ["zeroize_derive"] }

# Cryptography (Auth) - for Forensics & Kraken
hmac = "0.12"
sha2 = "0.10"
base64 = "0.22"
hex = "0.4"
uuid = { version = "1.0", features = ["v4"] }

# HTTP Client (for Kraken REST API)
reqwest = { version = "0.11", features = ["json"] }

# The Archiver (Deep Memory)
parquet = { version = "53.0", features = ["async"] }
arrow = "53.0"
object_store = { version = "0.11", features = ["aws"] }
futures = "0.3" # Added for stream manipulation
urlencoding = "2.1.3"
error-chain = "0.12.4"

[build-dependencies]
tonic-build = "0.10"

[[bin]]
name = "reflex"
path = "src/main.rs"

[[bin]]
name = "audit_runner"
path = "src/bin/audit_runner.rs"

[[bin]]
name = "live_runner"
path = "src/bin/live_runner.rs"

[[bin]]
name = "test_execution"
path = "src/bin/test_execution.rs"
